test/files/neg/t4044.check
t4044.scala:9: error: AnyRef takes no type parameters, expected: 1
  M[AnyRef] // error, (AnyRef :: *) not kind-conformant to (N :: * -> * -> *)
    ^
t4044.scala:11: error: kinds of the type arguments (Test.A) do not conform to the expected kinds of the type parameters (type N).
Test.A's type parameters do not match type N's expected parameters:
type _ has no type parameters, but type O has 1
  M[A] // error, (A :: (* -> *) not kind-conformant to (N :: * -> * -> *)
   ^
t4044.scala:15: error: kinds of the type arguments (Test.C) do not conform to the expected kinds of the type parameters (type N).
Test.C's type parameters do not match type N's expected parameters:
type _ has 1 type parameter, but type _ has 0
  M[C] // error, (C :: (* -> * -> * -> *) not kind-conformant to (N :: * -> * -> *)
   ^
3 errors
